--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  object-fit: cover;
 }
 
 body {
@@ -470,11 +470,10 @@ address {
 }
 
 .hero {
-  /* position: relative; */
   display: flex;
   text-align: center;
   justify-content: center;
-  height: 600px;
+  min-height: 600px;
   background-color: #2f303a;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img.jpg);
   background-repeat: no-repeat;
@@ -483,6 +482,7 @@ address {
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
+  padding: 50px 15px;
 }
 
 .hero .button {
