--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -30,6 +30,7 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
 
   .overlay-box {
     overflow: hidden;
@@ -43,24 +44,18 @@
 }
 
 .gallery-item {
-  width: calc((100% - 60px) / 3);
-  border: 1px solid #eeeeee;
-  display: block;
-  overflow: hidden;
-  position: relative;
+  width: calc(100% / 3);
+  padding: 15px;
+  // overflow: hidden;
+  // position: relative;
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+  // &:not(:nth-last-child(-n + 3)) {
+  //   margin-bottom: 30px;
+  // }
 
-  &:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-  }
-
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
-  }
+  // &:not(:nth-child(3n)) {
+  //   margin-right: 30px;
+  // }
 
   .title {
     font-size: 18px;
@@ -68,6 +63,16 @@
     letter-spacing: 0.06em;
     color: #212121;
     margin-bottom: 4px;
+  }
+}
+
+.item-box {
+  border: 1px solid #eeeeee;
+  display: block;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
