--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -15,11 +15,10 @@
 }
 
 .hero {
-  /* position: relative; */
-  display: flex;
+   display: flex;
   text-align: center;
   justify-content: center;
-  height: 600px;
+  min-height: 600px;
   background-color: $background-color;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img.jpg);
   background-repeat: no-repeat;
@@ -28,6 +27,7 @@
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
+  padding: 50px 15px;
 
   .button {
     padding: 10px 32px;
