--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -322,6 +322,7 @@ address {
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
 }
 
 .gallery .overlay-box {
@@ -335,23 +336,8 @@ address {
 }
 
 .gallery-item {
-  width: calc((100% - 60px) / 3);
-  border: 1px solid #eeeeee;
-  display: block;
-  overflow: hidden;
-  position: relative;
-}
-
-.gallery-item:hover, .gallery-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.gallery-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
-
-.gallery-item:not(:nth-child(3n)) {
-  margin-right: 30px;
+  width: calc(100% / 3);
+  padding: 15px;
 }
 
 .gallery-item .title {
@@ -360,6 +346,15 @@ address {
   letter-spacing: 0.06em;
   color: #212121;
   margin-bottom: 4px;
+}
+
+.item-box {
+  border: 1px solid #eeeeee;
+  display: block;
+}
+
+.item-box:hover, .item-box:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-item-description {
