--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,14 +1,28 @@
 .contacts {
-  margin: 0;
-  display: flex;
-  align-items: center;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+  }
 }
+
+// .contacts {
+//   margin: 0;
+//   display: flex;
+//   align-items: center;
+// }
 
 .contacts-item {
   color: $primary-text-color;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 12px;
+  line-height: 2px;
   letter-spacing: 0.02em;
   text-decoration: none;
   display: flex;
@@ -20,8 +34,10 @@
     color: $accent-color;
   }
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
