--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,20 +1,34 @@
 .logo {
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 2;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-right: 93px;
-  padding: 24px 0;
+  // margin-right: 93px;
+  padding: 16px 0;
+
+  & .accent {
+    color: $accent-color;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
 }
 
-.logo-footer {
-  color: $primary-white;
-  font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  display: block;
-  margin-bottom: 20px;
-}
+// .logo-footer {
+//   color: $primary-white;
+//   font-family: Raleway, sans-serif;
+//   font-size: 26px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+//   text-decoration: none;
+//   display: block;
+//   margin-bottom: 20px;
+// }
