--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,6 +1,15 @@
 .nav {
-  display: flex;
-  align-items: center;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-right: 84px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-right: 305px;
+  }
 }
 
 .nav-item {
@@ -26,5 +35,21 @@
 
   &:not(:last-child) {
     margin-right: 50px;
+  }
+}
+
+.current {
+  color: $accent-color;
+  position: relative;
+
+  &::after {
+    content: "";
+    background-color: $accent-color;
+    width: 100%;
+    height: 4px;
+    display: block;
+    border-radius: 2px;
+    position: absolute;
+    top: 44px;
   }
 }
