--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,7 +15,7 @@ html {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  object-fit: cover;
 }
 
 body {
@@ -279,6 +279,20 @@ address {
   border: 1px solid transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  color: #ffffff;
+}
+
+.button-text {
+  color: #ffffff;
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  padding: 10px 32px;
+}
+
+.button-text:hover, .button-text:focus {
   color: #ffffff;
 }
 
