--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -12,3 +12,19 @@
   border-radius: 4px;
   color: $primary-white;
 }
+
+.button-text {
+  color: $primary-white;
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  // text-align: center;
+  letter-spacing: 0.06em;
+  padding: 10px 32px;
+
+  &:hover,
+  &:focus {
+    color: $primary-white;
+  }
+}
