--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -12,12 +12,6 @@
   }
 }
 
-// .contacts {
-//   margin: 0;
-//   display: flex;
-//   align-items: center;
-// }
-
 .contacts-item {
   color: $primary-text-color;
   font-weight: 500;
@@ -47,9 +41,10 @@
   fill: $primary-text-color;
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts-item:hover .contacts-svg,
-.contacts-item:focus .contacts-svg {
-  fill: $accent-color;
-  cursor: pointer;
+
+  .contacts-item:hover &,
+  .contacts-item:focus & {
+    fill: $accent-color;
+    cursor: pointer;
+  }
 }
