--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,53 +1,53 @@
-.button-text {
-  color: $primary-white;
-  text-align: center;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  // text-align: center;
-  letter-spacing: 0.06em;
-  padding: 10px 32px;
-
-  &:hover,
-  &:focus {
-    color: $primary-white;
-  }
-}
-
 .hero {
-  /* position: relative; */
   display: flex;
   text-align: center;
-  justify-content: center;
-  height: 600px;
+  min-height: 400px;
   background-color: $background-color;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
+  max-width: 480px;
   margin-right: auto;
   margin-left: auto;
 
-  .button {
-    padding: 10px 32px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-tablet.jpg);
+  }
+
+  @media screen and (min-width: 1200px) {
+    min-height: 600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+      url(../images/hero-img.jpg);
+    max-width: 1600px;
   }
 }
 
 .hero-content {
-  max-width: 696px;
+  max-width: 480px;
   text-align: center;
   margin: auto;
-  position: relative;
+  padding: 118px 60px;
+  color: $primary-white;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding: 200px 250px;
+  }
 }
 
 .hero-title {
-  margin: 0;
-  color: $primary-white;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
