--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -98,11 +98,17 @@ address {
 .section-title {
   color: #212121;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 36px;
+  }
 }
 
 .logo {
@@ -435,6 +441,12 @@ address {
   letter-spacing: 0.03em;
   transform: translatey(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social-link {
