--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,3 +1,9 @@
+.socials-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .social-link {
   width: 44px;
   height: 44px;
