--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
   display: flex;
   text-align: center;
+  justify-content: center;
   min-height: 400px;
   background-color: $background-color;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
@@ -34,7 +35,7 @@
 
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
-    padding: 200px 250px;
+    padding: 50px 15px;
   }
 }
 
