--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,22 +1,34 @@
 .team-sect {
   background-color: $secondary-grey;
+  padding: 60px 0;
 
-  padding: 94px 0;
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 
 .team-cards {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   margin: -15px;
   padding: 0;
 }
 
 .team-card {
-  width: 270px;
+  width: 450px;
   margin: 15px;
   background: $primary-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .card-title {
@@ -41,10 +53,4 @@
 
 .card-content {
   padding: 30px 0;
-}
-
-.socials-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
