--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -11,7 +11,10 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: -15px;
-  // align-items: center;
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 
 .list-item {
@@ -24,10 +27,6 @@
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  // &:not(:last-child) {
-  //   margin-right: 30px;
-  // }
 
   &:hover,
   &:focus {
@@ -42,8 +41,6 @@
   @media screen and (min-width: 1200px) {
     width: 170px;
   }
-}
-
 }
 
 .logo-svg {
