--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -22,13 +22,17 @@
   }
 }
 
-// .logo-footer {
-//   color: $primary-white;
-//   font-family: Raleway, sans-serif;
-//   font-size: 26px;
-//   line-height: 1.19;
-//   letter-spacing: 0.03em;
-//   text-decoration: none;
-//   display: block;
-//   margin-bottom: 20px;
-// }
+.logo-footer {
+  color: $primary-white;
+  font-family: Raleway, sans-serif;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 20px;
+
+  & .accent {
+    color: $accent-color;
+  }
+}
