--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -46,9 +46,9 @@
 .logo-svg {
   fill: $main-fill-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.list-item:hover .logo-svg,
-.list-item:focus .logo-svg {
-  fill: $accent-color;
+  .list-item:hover &,
+  .list-item:focus & {
+    fill: $accent-color;
+  }
 }
