--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,46 +3,59 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  .container {
-    display: flex;
+  & .container {
+    text-align: center;
   }
 
-  .button {
+  & .button {
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
     padding: 10px 29px;
-    display: flex;
+    min-width: 200px;
+    // display: flex;
   }
 
-  .socials-list {
+  & .socials-list {
     display: flex;
-    align-items: baseline;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
-  .social-link {
+  & .social-link {
     background-color: rgba(255, 255, 255, 0.1);
   }
 
-  .social-link:hover {
+  & .social-link:hover {
     transition: transform 500ms ease;
     background-color: $accent-color;
   }
 
-  .social-svg {
+  & .social-svg {
     fill: $primary-white;
   }
 }
 
 .footer-section {
-  min-width: 270px;
   margin-right: 30px;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    min-width: 270px;
+  }
 }
 
 .call-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: $primary-white;
   margin-bottom: 20px;
 }
+
+// .socials-list {
+//     display: flex;
+//     align-items: baseline;
+//     justify-content: flex-start;
+//   }
