--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,6 +4,8 @@
   margin-right: auto;
   margin-left: auto;
 
+  @media screen and (max-width: 479px) {
+  }
   @media screen and (min-width: 480px) {
     width: 480px;
   }
