--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,8 +4,7 @@
   line-height: 2;
   letter-spacing: 0.03em;
   text-decoration: none;
-  // margin-right: 93px;
-  padding: 16px 0;
+  // padding: 16px 0;
 
   & .accent {
     color: $accent-color;
@@ -20,19 +19,10 @@
     line-height: 1.19;
     margin-right: 93px;
   }
-}
 
-.logo-footer {
-  color: $primary-white;
-  font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  display: block;
-  margin-bottom: 20px;
-
-  & .accent {
-    color: $accent-color;
+  .footer & {
+    color: $primary-white;
+    margin-bottom: 20px;
+    display: block;
   }
 }
