--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,15 +7,6 @@
     text-align: center;
   }
 
-  & .button {
-    display: flex;
-    margin: 0 auto;
-    align-items: center;
-    padding: 10px 29px;
-    min-width: 200px;
-    // display: flex;
-  }
-
   & .socials-list {
     display: flex;
     justify-content: center;
@@ -36,11 +27,11 @@
 }
 
 .footer-section {
-  margin-right: 30px;
   margin-bottom: 60px;
 
   @media screen and (min-width: 1200px) {
     min-width: 270px;
+    // margin-right: 30px;
   }
 }
 
