--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,10 +1,21 @@
 .gallery-menu {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    text-align: center;
+    margin-bottom: 36px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: center;
+    margin-bottom: 50px;
+  }
 }
 
 .gallery-btn {
+  display: inline-block;
+  margin-right: 8px;
+  margin-bottom: 15px;
   background: #f5f4fa;
   border-radius: 4px;
   padding: 6px 22px;
@@ -21,10 +32,6 @@
     color: $primary-white;
     background-color: $accent-color;
   }
-
-  &:not(:last-child) {
-    margin-right: 8px;
-  }
 }
 
 .gallery {
@@ -39,23 +46,25 @@
 }
 
 .gallery-sect {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 
 .gallery-item {
-  width: calc(100% / 3);
-  padding: 15px;
-  // overflow: hidden;
-  // position: relative;
+  // width: 450px;
+  margin: 15px;
+  margin-bottom: 30px;
 
-  // &:not(:nth-last-child(-n + 3)) {
-  //   margin-bottom: 30px;
-  // }
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2);
+  }
 
-  // &:not(:nth-child(3n)) {
-  //   margin-right: 30px;
-  // }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% / 3);
+  }
 
   .title {
     font-size: 18px;
@@ -101,9 +110,17 @@
   background-color: rgba(33, 150, 243, 0.9);
   color: $primary-white;
   font-size: 18px;
-  padding: 63px 24px;
+  padding: 77px 24px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   transform: translatey(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
 }
