--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -59,11 +59,13 @@
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
-    width: calc(100% / 2);
+    width: 354px;
+    // width: calc(100% / 2);
   }
 
   @media screen and (min-width: 1200px) {
-    width: calc(100% / 3);
+    width: 370px;
+    // width: calc(100% / 3);
   }
 
   .title {
