--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ address {
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -74,18 +75,21 @@ address {
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+    margin: 0 auto;
   }
 }
 
@@ -141,6 +145,12 @@ address {
   color: #ffffff;
   margin-bottom: 20px;
   display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin: 0 auto;
+  }
 }
 
 .nav {
@@ -254,6 +264,24 @@ address {
 .contacts-item:focus .contacts-svg {
   fill: #2196f3;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .address {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .address {
+    margin-right: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address {
+    margin-right: 70px;
+  }
 }
 
 .address-item:not(:last-child) {
@@ -479,9 +507,15 @@ address {
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .submit-form {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
+
 .subscribe-form {
   position: relative;
-  margin-right: 12px;
 }
 
 .subscribe-input {
@@ -500,6 +534,13 @@ address {
 
 .subscribe-input:focus {
   outline: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .subscribe-svg {
@@ -600,7 +641,6 @@ address {
 
 .features-box {
   margin: 15px;
-  width: 450px;
 }
 
 @media screen and (min-width: 768px) {
@@ -894,9 +934,32 @@ address {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: nowrap;
+    text-align: start;
+  }
+}
+
 .footer .socials-list {
   display: flex;
   justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .socials-list {
+    justify-content: start;
+  }
 }
 
 .footer .social-link {
