--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,3 +1,16 @@
+.address {
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 165px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
+}
+
 .address-item:not(:last-child) {
   margin-bottom: 8px;
 }
