--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,20 +1,22 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 
-  @media screen and (max-width: 479px) {
-  }
   @media screen and (min-width: 480px) {
     width: 480px;
+    margin: 0 auto;
   }
 
   @media screen and (min-width: 768px) {
     width: 768px;
+    margin: 0 auto;
   }
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    margin: 0 auto;
   }
 }
