--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,11 +5,28 @@
 
   & .container {
     text-align: center;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: baseline;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      flex-wrap: nowrap;
+      text-align: start;
+    }
   }
 
   & .socials-list {
     display: flex;
     justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+      justify-content: start;
+    }
   }
 
   & .social-link {
