--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ address {
 
 .button-text:hover, .button-text:focus {
   color: #ffffff;
+  opacity: 0.8;
 }
 
 .backdrop {
@@ -519,7 +520,7 @@ address {
 }
 
 .subscribe-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #2f303a;
@@ -591,7 +592,6 @@ address {
 }
 
 .hero-content {
-  max-width: 480px;
   text-align: center;
   margin: auto;
   padding: 118px 60px;
@@ -618,6 +618,7 @@ address {
   .hero-title {
     font-size: 44px;
     line-height: 1.36;
+    width: 696px;
   }
 }
 
