--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -341,6 +341,7 @@ address {
 
 .button-text:hover, .button-text:focus {
   color: #ffffff;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 1200px) {
@@ -355,7 +356,7 @@ address {
 }
 
 .subscribe-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #2f303a;
