--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -27,7 +27,7 @@
 }
 
 .hero-content {
-  max-width: 480px;
+  // max-width: 480px;
   text-align: center;
   margin: auto;
   padding: 118px 60px;
@@ -50,5 +50,6 @@
   @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
+    width: 696px;
   }
 }
