--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,10 @@ address {
   min-width: 200px;
 }
 
+.popup-modal .button {
+  margin: 0 auto;
+}
+
 .button-text {
   color: #ffffff;
   text-align: center;
@@ -363,13 +367,25 @@ address {
   left: 0;
   right: 0;
   overflow: hidden auto;
-  padding: 20px 0;
+  padding: 93px 0;
+  display: flex;
+}
+
+@media screen and (min-width: 768px) {
+  .popup {
+    padding: 208px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .popup {
+    padding: 221px 0;
+  }
 }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
 }
 
 .is-hidden .modal {
@@ -378,10 +394,151 @@ address {
 
 .popup-modal {
   max-width: 450px;
+  width: 100%;
   min-height: 609px;
   padding: 40px;
   position: relative;
   background-color: #ffffff;
+  margin: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .popup-modal {
+    max-width: 528px;
+    min-height: 581px;
+  }
+}
+
+.close-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #ffffff;
+  fill: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover, .close-btn:focus {
+  color: #2196f3;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-text {
+  margin-bottom: 30px;
+  font-style: 400;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  border-radius: 1px;
+}
+
+.form-input {
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 42px;
+  transition: color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover, .form-input:focus {
+  border-color: #2196f3;
+  outline: none;
+}
+
+.form-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  margin-bottom: 28px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+}
+
+.form-comment:hover, .form-comment:focus {
+  border-color: #2196f3;
+  outline: none;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-svg {
+  position: absolute;
+  display: block;
+  width: 15px;
+  height: 13px;
+  fill: #212121;
+  top: 53%;
+  left: 15px;
+  pointer-events: none;
+}
+
+.form-input:focus + .form-svg,
+.form-input:hover + .form-svg {
+  fill: #2196f3;
+}
+
+.input-label {
+  left: 0;
+  top: -23px;
+  margin-bottom: 4px;
+}
+
+.user-comment {
+  margin-bottom: 4px;
+}
+
+.checkbox-label {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 2;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.checkbox-label::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-color: #ffffff;
+  border: 1px solid #212121;
+  border-radius: 4px;
+  background-image: url(../images/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-right: 7px;
+}
+
+.checkbox:checked + .checkbox-label::before {
+  background-color: #2196f3;
+}
+
+.policy-link {
+  text-decoration: underline;
+  color: #2196f3;
 }
 
 @media screen and (min-width: 1200px) {
