--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,12 +18,21 @@
   left: 0;
   right: 0;
   overflow: hidden auto;
-  padding: 20px 0;
+  padding: 93px 0;
+  display: flex;
+
+  @media screen and (min-width: 768px) {
+    padding: 208px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 221px 0;
+  }
 }
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
 }
 
 .is-hidden .modal {
@@ -32,11 +41,19 @@
 
 .popup-modal {
   max-width: 450px;
+  width: 100%;
   min-height: 609px;
   padding: 40px;
   position: relative;
   background-color: $primary-white;
+  margin: auto;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    min-height: 581px;
+  }
 }
+
 // .modal {
 //   min-width: 450px;
 //   min-height: 581px;
@@ -56,20 +73,20 @@
 //   }
 // }
 
-// .close-btn {
-//   position: absolute;
-//   right: 10px;
-//   top: 10px;
-//   width: 30px;
-//   height: 30px;
-//   border: 1px solid rgba(0, 0, 0, 0.1);
-//   border-radius: 50%;
-//   background-color: $primary-white;
-//   fill: $title-text-color;
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.close-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: $primary-white;
+  fill: $title-text-color;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//   &:hover,
-//   &:focus {
-//     color: $accent-color;
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
