--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ address {
 }
 
 @media screen and (min-width: 768px) {
-  .logo {
+  .footer .logo {
     margin: 0 auto;
   }
 }
@@ -246,8 +246,15 @@ address {
   color: #2196f3;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .contacts-item:not(:last-child) {
+    margin-bottom: 0;
     margin-right: 30px;
   }
 }
@@ -388,10 +395,6 @@ address {
   visibility: hidden;
 }
 
-.is-hidden .modal {
-  transform: translatex(-50%) scale(0.1);
-}
-
 .popup-modal {
   max-width: 450px;
   width: 100%;
@@ -400,6 +403,8 @@ address {
   position: relative;
   background-color: #ffffff;
   margin: auto;
+  transition: all 4s ease;
+  transform: scale(1);
 }
 
 @media screen and (min-width: 1200px) {
@@ -407,6 +412,10 @@ address {
     max-width: 528px;
     min-height: 581px;
   }
+}
+
+.is.hidden .popup-modal {
+  transform: scale(4);
 }
 
 .close-btn {
@@ -724,6 +733,26 @@ address {
   line-height: 1.71;
   letter-spacing: 0.03em;
   margin: 0;
+}
+
+.antenna-icon:before {
+  background-image: url(../images/antenna.svg);
+  background-position: 100px 25px;
+}
+
+.clock-icon:before {
+  background-image: url(../images/clock.svg);
+  background-position: 100px 25px;
+}
+
+.diagram-icon:before {
+  background-image: url(../images/diagram.svg);
+  background-position: 100px 25px;
+}
+
+.astronaut-icon:before {
+  background-image: url(../images/astronaut.svg);
+  background-position: 100px 25px;
 }
 
 .work-sect {
