--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -148,7 +148,7 @@ address {
 }
 
 @media screen and (min-width: 768px) {
-  .logo {
+  .footer .logo {
     margin: 0 auto;
   }
 }
@@ -246,8 +246,15 @@ address {
   color: #2196f3;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .contacts-item:not(:last-child) {
+    margin-bottom: 0;
     margin-right: 30px;
   }
 }
