--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -28,9 +28,16 @@
     color: $accent-color;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     &:not(:last-child) {
-      margin-right: 30px;
+      margin-bottom: 10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      &:not(:last-child) {
+        margin-bottom: 0;
+        margin-right: 30px;
+      }
     }
   }
 }
