--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,8 +4,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  // width: 100%;
-  // height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 1;
   visibility: visible;
@@ -35,10 +33,6 @@
   visibility: hidden;
 }
 
-.is-hidden .modal {
-  transform: translatex(-50%) scale(0.1);
-}
-
 .popup-modal {
   max-width: 450px;
   width: 100%;
@@ -47,6 +41,8 @@
   position: relative;
   background-color: $primary-white;
   margin: auto;
+  transition: all 4s ease;
+  transform: scale(1);
 
   @media screen and (min-width: 1200px) {
     max-width: 528px;
@@ -54,6 +50,9 @@
   }
 }
 
+.is.hidden .popup-modal {
+  transform: scale(4);
+}
 // .modal {
 //   min-width: 450px;
 //   min-height: 581px;
