--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -61,22 +61,22 @@
   margin: 0;
 }
 
-// .antenna-icon:before {
-//   background-image: url(../images/antenna.svg);
-//   background-position: 100px 25px;
-// }
+.antenna-icon:before {
+  background-image: url(../images/antenna.svg);
+  background-position: 100px 25px;
+}
 
-// .clock-icon:before {
-//   background-image: url(../images/clock.svg);
-//   background-position: 100px 25px;
-// }
+.clock-icon:before {
+  background-image: url(../images/clock.svg);
+  background-position: 100px 25px;
+}
 
-// .diagram-icon:before {
-//   background-image: url(../images/diagram.svg);
-//   background-position: 100px 25px;
-// }
+.diagram-icon:before {
+  background-image: url(../images/diagram.svg);
+  background-position: 100px 25px;
+}
 
-// .astronaut-icon:before {
-//   background-image: url(../images/astronaut.svg);
-//   background-position: 100px 25px;
-// }
+.astronaut-icon:before {
+  background-image: url(../images/astronaut.svg);
+  background-position: 100px 25px;
+}
