--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -23,6 +23,8 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -52,6 +54,10 @@ button {
 
 address {
   font-style: normal;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 .visually-hidden {
@@ -413,6 +419,7 @@ address {
 
 .header {
   border-bottom: 1px solid #ececec;
+  flex: 0 0 auto;
 }
 
 .header-flex {
@@ -646,6 +653,7 @@ address {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  flex: 0 0 auto;
 }
 
 .footer .container {
