--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,6 +23,8 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -52,4 +54,8 @@ button {
 
 address {
   font-style: normal;
+}
+
+main {
+  flex: 1 0 auto;
 }
