--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $background-color;
   padding-top: 60px;
   padding-bottom: 60px;
+  flex: 0 0 auto;
 
   & .container {
     text-align: center;
