--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,6 +5,7 @@
   letter-spacing: 0.03em;
   text-decoration: none;
   // padding: 16px 0;
+  z-index: 1;
 
   & .accent {
     color: $accent-color;
