--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -15,13 +15,17 @@
 .contacts-item {
   color: $primary-text-color;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 2px;
+  font-size: 18px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   text-decoration: none;
-  display: flex;
-  align-items: center;
+  text-align: center;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:not(:last-child) {
+    margin-bottom: 16px;
+  }
 
   &:hover,
   &:focus {
@@ -29,6 +33,11 @@
   }
 
   @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 2px;
+
     &:not(:last-child) {
       margin-bottom: 10px;
     }
