--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -13,28 +13,43 @@
 }
 
 .nav-item {
-  margin: 0;
-  display: flex;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin: 0;
+  }
 }
 
 .nav-link {
   color: $title-text-color;
   font-family: inherit;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 18px;
+  line-height: 1.16;
+  text-align: center;
   letter-spacing: 0.02em;
-  display: flex;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 32px 0;
+
+  &:not(:last-child) {
+    margin-bottom: 52px;
+  }
 
   &:hover,
   &:focus {
     color: $accent-color;
   }
 
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    font-size: 14px;
+    line-height: 1.14;
+    padding: 32px 0;
+
+    &:not(:last-child) {
+      margin-right: 50px;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -52,4 +67,8 @@
     position: absolute;
     top: 44px;
   }
+}
+
+.menu-nav {
+  margin-bottom: 60px;
 }
