--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,28 +1,44 @@
 .header {
   border-bottom: 1px solid #ececec;
   flex: 0 0 auto;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .header-flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
-  // min-height: 60px;
 }
 
 .menu-btn {
-  position: absolute;
+  background-color: transparent;
+  border: none;
   width: 40px;
   height: 40px;
-  top: 10px;
-  right: 15px;
+  z-index: 1;
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
 
-  @media screen and (min-width: 1200px) {
-    display: none;
-  }
+.close-menu-icon {
+  display: none;
+}
+
+.header-menu {
+  position: absolute;
+  width: 480px;
+  height: 453px;
+  padding-top: 120px;
+  top: 0;
+  right: 0;
+
+  background: $primary-white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
