--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -35,8 +35,8 @@
   position: absolute;
   width: 480px;
   height: 453px;
-  padding-top: 120px;
-  top: 0;
+  padding: 60px;
+  top: 49px;
   right: 0;
 
   background: $primary-white;
