--- a/css/main.css
+++ b/css/main.css
@@ -683,8 +683,8 @@ main {
   position: absolute;
   width: 480px;
   height: 453px;
-  padding-top: 120px;
-  top: 0;
+  padding: 60px;
+  top: 49px;
   right: 0;
   background: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
