--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -471,7 +471,12 @@ main {
   border: none;
   width: 40px;
   height: 40px;
+  position: relative;
   z-index: 1;
+}
+
+.menu-btn:hover, .menu-btn:focus {
+  fill: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
@@ -482,6 +487,14 @@ main {
 
 .close-menu-icon {
   display: none;
+}
+
+.menu-btn.is-open .open-menu-icon {
+  display: none;
+}
+
+.menu-btn.is-open .close-menu-icon {
+  display: block;
 }
 
 .header-menu {
