--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,7 +20,13 @@
   border: none;
   width: 40px;
   height: 40px;
+  position: relative;
   z-index: 1;
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -31,11 +37,20 @@
   display: none;
 }
 
+.menu-btn.is-open .open-menu-icon {
+  display: none;
+}
+
+.menu-btn.is-open .close-menu-icon {
+  display: block;
+}
+
 .header-menu {
   position: absolute;
   width: 480px;
   height: 453px;
   padding: 60px;
+  // УТОЧНИТЬ ПРО TOP
   top: 49px;
   right: 0;
 
