--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -46,7 +46,6 @@
 }
 
 .header-menu {
-  display: none;
   position: absolute;
   width: 480px;
   height: 453px;
@@ -57,8 +56,15 @@
 
   background: $primary-white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  opacity: 0;
+  visibility: hidden;
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.header-menu.is-open {
+  opacity: 1;
+  visibility: visible;
 }
