--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -498,7 +498,6 @@ main {
 }
 
 .header-menu {
-  display: none;
   position: absolute;
   width: 480px;
   height: 453px;
@@ -507,12 +506,19 @@ main {
   right: 0;
   background: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  opacity: 0;
+  visibility: hidden;
 }
 
 @media screen and (min-width: 768px) {
   .header-menu {
     display: none;
   }
+}
+
+.header-menu.is-open {
+  opacity: 1;
+  visibility: visible;
 }
 
 .gallery-menu {
