--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -128,7 +128,6 @@ main {
   width: 40px;
   height: 40px;
   position: relative;
-  z-index: 1;
 }
 
 .menu-btn:hover, .menu-btn:focus {
@@ -155,7 +154,8 @@ main {
 
 .header-menu {
   position: absolute;
-  width: 480px;
+  left: 0;
+  right: 0;
   height: 453px;
   padding: 60px;
   top: 0;
