--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -4,7 +4,6 @@
   width: 40px;
   height: 40px;
   position: relative;
-  z-index: 1;
 
   &:hover,
   &:focus {
@@ -30,7 +29,8 @@
 
 .header-menu {
   position: absolute;
-  width: 480px;
+  left: 0;
+  right: 0;
   height: 453px;
   padding: 60px;
   top: 0;
