--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,7 +17,7 @@
     screen and (min-resolution: 2dppx),
     screen and (min-width: 320px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("../../images/hero@2x.jpg");
+      url(../images/hero@2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
@@ -31,13 +31,13 @@
     screen and (min-resolution: 2dppx),
     screen and (min-width: 768px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-tablet@2x.jpg);
+      url(../images/hero-tablet@2x.jpg);
   }
 
   @media screen and (min-width: 1200px) {
     min-height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url(../../images/hero-desktop.jpg);
+      url(../images/hero-desktop.jpg);
     max-width: 1600px;
   }
 
@@ -46,7 +46,7 @@
     screen and (min-resolution: 2dppx),
     screen and (min-width: 1200px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url("../../images/hero-desktop@2x.jpg");
+      url(../images/hero-desktop@2x.jpg);
   }
 }
 
@@ -58,6 +58,7 @@
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
     padding: 50px 15px;
+    width: 696px;
   }
 }
 
