--- a/css/main.css
+++ b/css/main.css
@@ -842,21 +842,21 @@ main {
 }
 
 .antenna-icon::before {
-  background-image: url(../../images/antenna.svg);
+  background-image: url(/../images/antenna.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .clock-icon::before {
-  background-image: url(../../images/clock.svg);
+  background-image: url(/../images/clock.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .diagram-icon::before {
-  background-image: url(../../images/diagram.svg);
+  background-image: url(/../images/diagram.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
