--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -37,21 +37,21 @@
 }
 
 .antenna-icon::before {
-  background-image: url(../../images/antenna.svg);
+  background-image: url(/../images/antenna.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .clock-icon::before {
-  background-image: url(../../images/clock.svg);
+  background-image: url(/../images/clock.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .diagram-icon::before {
-  background-image: url(../../images/diagram.svg);
+  background-image: url(/../images/diagram.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
