--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -55,9 +55,13 @@
   margin: auto;
   color: $primary-white;
 
+  @media screen and (min-width: 768px) {
+    padding: 50px 15px;
+    width: 400px;
+  }
+
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
-    padding: 50px 15px;
     width: 696px;
   }
 }
