--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -58,7 +58,7 @@
 }
 
 .astronaut-icon::before {
-  background-image: url(../../images/astronaut.svg);
+  background-image: url(/../images/astronaut.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
