--- a/css/main.css
+++ b/css/main.css
@@ -869,7 +869,7 @@ main {
 }
 
 .astronaut-icon::before {
-  background-image: url(../../images/astronaut.svg);
+  background-image: url(/../images/astronaut.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
