--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -37,28 +37,28 @@
 }
 
 .antenna-icon::before {
-  background-image: url(/../images/antenna.svg);
+  background-image: url(../images/antenna.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .clock-icon::before {
-  background-image: url(/../images/clock.svg);
+  background-image: url(../images/clock.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .diagram-icon::before {
-  background-image: url(/../images/diagram.svg);
+  background-image: url(../images/diagram.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .astronaut-icon::before {
-  background-image: url(/../images/astronaut.svg);
+  background-image: url(../images/astronaut.svg);
   background-size: 70px 70px;
   background-position: center;
   background-repeat: no-repeat;
